// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressPreviewRow  /> should match snapshot 1`] = `
.c0 {
  font-family: Rubik,sans-serif;
  font-size: 16px;
  line-height: 20px;
  background-color: #ffffff;
  color: #16213E;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 14px;
  line-height: 20px;
  font-weight: bold;
}

.c3 {
  font-size: 14px;
  line-height: 20px;
  color: #565b61;
}

.c4 {
  font-size: 14px;
  line-height: 20px;
  color: #16213E;
  font-weight: bold;
}

.c5 {
  font-size: inherit;
  line-height: normal;
}

@media only screen and (max-width:768px) {

}

<div
  class="c0"
  style="min-height: 100dvh;"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      To
    </span>
    <span
      class="c3"
    >
      <div
        class="c1"
      >
        <span
          class="c4"
        >
          My Contact
        </span>
        <span
          class="c5"
          style="font-family: "Roboto mono", monospace; letter-spacing: 0;"
        >
          <span
            class="notranslate"
            translate="no"
          >
            oasis1 qq2v zcvx n0js 5uns ch5m e2xz 4kr4 3vca sv0d 5eq4
          </span>
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`<PreviewRow /> should render component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: bold;
}

.c2 {
  font-size: 14px;
  line-height: 20px;
  color: grayMedium;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Type
    </span>
    <span
      class="c2"
    >
      addEscrow
    </span>
  </div>
</div>
`;

exports[`<ResponsiveGridRow /> should render component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width:768px) {
  .c2 {
    margin-bottom: 6px;
  }
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Type
    </span>
  </div>
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      transfer
    </span>
  </div>
</div>
`;
